azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-9.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..13
      Directive@0..13
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "TAG"
        InlineSeparator@4..5 " "
        Error@5..9 "!foo"
        InlineSeparator@9..10 " "
        TagPrefix@10..13 "bar"
    ,
    errors: [
        Diagnostic {
            span: 5..9,
            severity: Error,
            message: "invalid tag handle: expected '!'",
        },
    ],
}
