azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_yaml_directive-11.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..21
      Directive@0..21
        DirectiveToken@0..1 "%"
        DirectiveName@1..5 "YAML"
        InlineSeparator@5..6 " "
        YamlVersion@6..13 "100.200"
        Error@13..21 "#comment"
    ,
    errors: [
        Diagnostic {
            span: 13..21,
            severity: Error,
            message: "expected end of line",
        },
    ],
}
