azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_yaml_directive-12.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..22
      Directive@0..22
        DirectiveToken@0..1 "%"
        DirectiveName@1..5 "YAML"
        InlineSeparator@5..6 " "
        YamlVersion@6..13 "100.200"
        InlineSeparator@13..14 " "
        CommentText@14..22
          CommentToken@14..15 "#"
          CommentBody@15..22 "comment"
    ,
    errors: [],
}
