azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_yaml_directive-3.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..5
      DirectiveToken@0..1 "%"
      DirectiveName@1..5 "YAML"
      Error@5..5 ""
    ,
    errors: [
        Diagnostic {
            span: 5..5,
            severity: Error,
            message: "expected YAML version",
        },
    ],
}
