azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_yaml_directive-4.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..7
      Directive@0..7
        DirectiveToken@0..1 "%"
        DirectiveName@1..5 "YAML"
        InlineSeparator@5..7 "  "
        Error@7..7 ""
    ,
    errors: [
        Diagnostic {
            span: 7..7,
            severity: Error,
            message: "invalid YAML version: expected digit",
        },
    ],
}
